// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkCard should render correctly 1`] = `
<View
  style={null}
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Example Card"
    background={undefined}
    onPress={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 2,
          "elevation": 2,
        },
        Object {
          "padding": 16,
        },
      ]
    }
    useForeground={true}
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkCard should render correctly with arbitrary props 1`] = `
<View
  style={null}
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Example Card"
    background={undefined}
    onPress={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 2,
          "elevation": 2,
        },
        Object {
          "padding": 16,
        },
      ]
    }
    testID="arbitrary value"
    useForeground={true}
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkCard should render correctly with the "focused" state 1`] = `
<View
  style={null}
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Example Card"
    background={undefined}
    onPress={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 2,
          "elevation": 2,
        },
        Object {
          "padding": 16,
        },
        Object {
          "elevation": 16,
        },
      ]
    }
    useForeground={true}
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkCard should render correctly without padding 1`] = `
<View
  style={null}
>
  <View
    accessibilityComponentType="button"
    accessibilityLabel="Example Card"
    background={undefined}
    onPress={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 2,
          "elevation": 2,
        },
      ]
    }
    useForeground={true}
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
  </View>
</View>
`;
